All tests now functioning. Working pdf output with external css, jinja templates, svg image.

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,4 +1,7 @@
-object {
+object, img {
     float:right;
-    border:4px groove orange;
+}
+body {
+    border:thin solid red;
+    height:500px;
 }
