--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     {% block head %}
-    <link rel="stylesheet" href="../templates/css/style.css" />
+    <link rel="stylesheet" href="http://192.168.33.101/reports/templates/css/style.css" />
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
