--- a/templates/html/test.html
+++ b/templates/html/test.html
@@ -7,6 +7,6 @@
 {% block title %}Test Template - with CSS {% endblock title %}
 
 {% block body %}
-<object type="image/svg+xmlns" data="{{ data }}">Fallback</object>
+<img src="{{ data }}" />
 {% endblock body %}
  
