We now have a working flask app generating PDFs from passed in parameters through get and/or post.

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,7 @@
 object, img {
-    float:right;
+    border: 1px solid black;
+    float: right;
+    width: 100px;
 }
 body {
     border:thin solid red;
