--- a/templates/test.html
+++ b/templates/test.html
@@ -7,6 +7,8 @@
 {% block title %}Test Template - with CSS {% endblock title %}
 
 {% block body %}
-<img src="{{ data }}" />
+<div style="padding:1px;border:5px groove orange;height:100px;width:100px;">
+    <img src="{{ data }}" />
+</div>
 {% endblock body %}
  
