Much work done. Now have a testing page where an arbitrary JSON can be submitted and get a result back full of specified charts. Just begining work on abstract way of calling intermediary data transformation tools based on request. 3 basic visualizations done - need to discuss and agree on a grammar at some point. many little details still missing, units such as % or $, style sheets - especially print ready, and the structure needs to be cleaned up. Next big steps will be expanding the test case of intermediary processing and then expanding dynamic routing of which template etc.

--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,9 @@
-object, img {
-    border: 1px solid black;
-    float: right;
-    width: 100px;
+html {
+    font-size: 12px;
 }
-body {
-    border:thin solid red;
-    height:500px;
+
+object, img {
+}
+
+div.visualization {
 }
