--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,70 @@
-html {
-    font-size: 12px;
+body {
+    border:1px solid black;
+}
+div {
+    box-sizing: border-box;
+}
+/*h3 {
+    background-color: rgba(255, 255, 255, 1);
+    border: 2px solid black;
+    bottom: 65px;
+    display: inline-block;
+    right: 20px;
+    position: relative;
+    font-style: italic;
+    padding:1px 2px;
+}*/
+h3 {
+    background-color: rgba(255, 255, 255, 1);
+    border: 2px solid black;
+    display: inline-block;
+    font-style: italic;
+    left: 11%;
+    padding: 1px 2px;
+    position: absolute;
+    top: 1%;
+}
+div.container {
+    border: 3px double black;
+    padding:2%;
 }
 
-object, img {
+div.vis_container.left,
+div.vis_container.right {
+    max-width: 49%
+}
+div.vis_container.left {}
+div.vis_container.right {}
+div.vis_container.span {}
+
+div.vis_container {
+
+}
+div.vis_container > * {
+    border:1px solid red;
+    max-width: 100%;
+}
+div.vis_container table td,
+div.vis_container table th {
+    max-width: 6%;
 }
 
-div.visualization {
+@media screen {
+    body {
+        margin: 2% 10%;
+        max-width: 80%;
+        min-width: 800px;
+        overflow: hidden;
+    }
+}
+/* Print-specific rules */
+@media print {
+    @page {
+            size: 8.5in 11in;
+            margin:0.3in 0.5in 0.5in;
+        }
+    h3 {
+        top:-0.25in;
+        left:0.2in;
+    }
 }
