--- a/templates/form.html
+++ b/templates/form.html
@@ -11,12 +11,33 @@
         <a href="/form"><h2>Clear Request</h2></a>
         {% block form %}
         <form method="POST" action="/form">
-            <textarea name="data" style="width:80%;height:500px;margin: 0 10%;"></textarea>
-            <input type="submit" name="submit" title="Submit" style="margin:0 10%;"/>
+            <textarea name="data" id="data" style="width:80%;height:500px;margin: 0 10%;"></textarea>
+            <!-- <input type="submit" name="submit" title="Submit" style="margin:0 10%;"/> -->
+            <button type="button" name="submit" id="submit" style="margin:0 10%;">Submit</button>
         </form>
         {% endblock %}
-
+        <!-- JQuery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <!-- JQuery UI -->
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+        <!-- fileDownload.js -->
+        <script src="{{ url_for('static', filename='jquery.fileDownload.js') }}"></script>
+        <!-- register click for fileDownload -->
+        <script>
+        $(document).ready(function() {
+            $("button#submit").click(function() {
+                $.fileDownload(
+                    "/form",
+                    {
+                        preparingMessageHtml: "We are preparing your report, please wait...",
+                        failMessageHtml: "There was a problem generating your report, please try again.",
+                        httpMethod: "POST",
+                        data: {data : $("textarea#data").val()}
+                    });
+            });
+        });
+        </script>
     </body>
 </html>
