--- a/templates/town_profile.html
+++ b/templates/town_profile.html
@@ -146,7 +146,7 @@ Town Profile{% if config["town"] -%} - {{ config["town"] }}{% endif -%}
     </h1>
     <h2>CERC town Profile 2014</h2>
     <div id="logo">
-        <img src="{{ url_for("static", filename="images/cerc.png") }}"
+        <img src="{{ url_for("static", filename="images/cerc.png") }}" />
     </div>
 </div>
 <div class="container first-container">
